--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "apollo-server-v4-knex-boilerplate",
+  "version": "1.0.0",
   "license": "MIT",
+  "private": true,
+  "main": "server.ts",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
@@ -20,11 +23,15 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-upload-minimal": "^1.5.4",
     "graphql-ws": "^5.12.0",
+    "image-size": "^1.0.2",
     "jose": "^4.13.1",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
     "prisma": "^4.11.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "typescript": "^4.9.5",
     "ws": "^8.13.0",
     "zod": "^3.21.4"
@@ -34,6 +41,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
+    "@types/request-promise": "^4.1.48",
     "@types/ws": "^8.5.4",
     "dotenv": "^16.0.3",
     "husky": "^8.0.3",
