--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist/src",
+    "outDir": "dist",
     "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
