upload feature with cloudinary

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@apollo/server": "^4.5.0",
     "@graphql-tools/schema": "^9.0.17",
     "@prisma/client": "^4.11.0",
+    "aws-sdk": "^2.1337.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
     "graphql-upload-minimal": "^1.5.4",
     "graphql-ws": "^5.12.0",
     "image-size": "^1.0.2",
