work on upload file to server

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 DATABASE_URL="mysql://root:soksan@localhost:3306/apollo_server_v4_db"
+PORT=5000
+ALGO="HS256"
+SECRET_KEY="test"
+S1=
+NODE_ENV=development
+AUTHORIZATION=
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
