--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@graphql-tools/schema": "^9.0.17",
     "@prisma/client": "^4.11.0",
     "aws-sdk": "^2.1337.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -32,6 +34,7 @@
     "jose": "^4.13.1",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
+    "node-fetch": "^3.3.1",
     "prisma": "^4.11.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
@@ -40,7 +43,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
