--- a/package.json
+++ b/package.json
@@ -6,18 +6,12 @@
   "main": "server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "push": "npx prisma db push",
-    "generate": "npx prisma generate",
-    "studio": "npx prisma studio",
-    "seed": "npx prisma db seed",
-    "prestart": "yarn push && yarn generate"
+    "start": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.5.0",
     "@graphql-tools/schema": "^9.0.17",
-    "@prisma/client": "^4.11.0",
     "aws-sdk": "^2.1337.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
@@ -35,7 +29,6 @@
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
     "node-fetch": "^3.3.1",
-    "prisma": "^4.11.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "typescript": "^4.9.5",
@@ -57,9 +50,6 @@
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
