--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.5.0",
+    "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
     "@graphql-tools/schema": "^9.0.17",
     "aws-sdk": "^2.1337.0",
     "axios": "^1.3.4",
