--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "typescript": "^4.9.5",
+    "webdav": "^5.0.0-r3",
     "ws": "^8.13.0",
     "zod": "^3.21.4"
   },
