--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "experimentalDecorators": true,
     "types": ["node"],
   },
-  "include": ["src/**/*", "scripts"],
+  "include": ["src/**/*", "scripts", "src/.ts"],
   "exclude": [
     "node_modules",
     "dist",
