--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-DATABASE_URL="mysql://root:soksan@localhost:3306/apollo_server_v4_db"
+DATABASE_URL="mysql://user:pass@localhost:3306/dbname"
 PORT=5000
 ALGO="HS256"
-SECRET_KEY="test"
+SECRET_KEY="secret"
+ORIGIN=
 S1=
-NODE_ENV=development
+NODE_ENV=
 AUTHORIZATION=
 CLOUDINARY_NAME=
 CLOUDINARY_API_KEY=
