--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,32 @@
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "src/*"
+      ]
+    }
   },
-  "include": ["src/**/*", "scripts", "src/.ts"],
+  "include": ["src/**/*", "scripts"],
   "exclude": [
     "node_modules",
     "dist",
     "test"
   ],
+  "plugins": [
+    {
+      "transform": "typescript-transform-paths",
+      "useRootDirs": true,
+      "afterDeclarations": true
+    }
+  ],
+  "ts-node": {
+    "require": [
+      "tsconfig-paths/register"
+    ]
+  }
 }
