--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist/src",
     "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -27,6 +27,10 @@
     "types": [
       "node"
     ],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    }
   },
   "include": ["src/**/*", "scripts"],
   "exclude": [
