--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "server.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/src/server.js",
+    "build": "babel src -d dist --extensions=\".ts,.js\"",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "generate": "graphql-codegen --config codegen.yml"
   },
@@ -41,6 +41,16 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-typescript": "^7.21.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
     "@graphql-codegen/cli": "^3.3.0",
     "@graphql-codegen/introspection": "^3.0.1",
     "@graphql-codegen/typescript": "^3.0.3",
@@ -52,6 +62,7 @@
     "@types/node": "^18.15.0",
     "@types/request-promise": "^4.1.48",
     "@types/ws": "^8.5.4",
+    "babel-plugin-module-resolver": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
