--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "dist/src",
     "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -27,9 +26,8 @@
     "types": [
       "node"
     ],
-    "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["./src/*"]
     }
   },
   "include": ["src/**/*", "scripts"],
